<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PIC-CHE</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Download Phrases</string>
    <string name="action_clear">Delete Phrases</string>
    <string name="action_add_phrase">Add Phrase</string>
    <string name="pic_desc">Picture of the phrase</string>
    <string name="desc_hok_mic">Hokkien recording microphone</string>
    <string name="arrow_desc">Navigation arrow</string>
    <string name="hokkien">Hokkien: </string>
    <string name="cantonese">Cantonese: </string>
    <string name="chinese">中文: </string>
    <string name="english">English: </string>
    <string name="play_all">Play All</string>
    <string name="title_activity_phrase">Phrase</string>
    <string name="self_phrase_title">New Phrase</string>
    <string name="self_add_phrase">Add new Phrase</string>

    <color name="P50">#e5fde0dc</color>
    <color name="P100">#f9bdbb</color>
    <color name="P200">#f69988</color>
    <color name="P300">#f36c60</color>
    <color name="P400">#e84e40</color>
    <color name="P500">#e51c23</color>
    <color name="P600">#dd191d</color>
    <color name="P700">#d01716</color>
    <color name="P800">#c41411</color>
    <color name="P900">#b0120a</color>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="green">#4CAF50</color>

    <string name="title_activity_new_phrase">New Phrase</string>
    <string name="title_activity_navigation_avtivity">PIC-CHE</string>
    <string name="title_activity_categories">Categories</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_new_phrases">You have no phrases in your phone!</string>
    <string name="action_search">Search</string>
    <string name="async_progress">Downloading, please wait...</string>
    <string name="title_credits">Credits</string>
    <string name="title_help">Help</string>

    <string-array name="help_letter">
        <item>a</item>
        <item>e</item>
        <item>eh</item>
        <item>ey</item>
        <item>i</item>
        <item>o</item>
        <item>oh</item>
        <item>u</item>
        <item>v</item>
    </string-array>

    <string-array name="help_example">
        <item>a-ka</item>
        <item>he</item>
        <item>geh</item>
        <item>lang-gey</item>
        <item>ci</item>
        <item>loh-ho</item>
        <item>oh</item>
        <item>gu</item>
        <item>hv</item>
    </string-array>

    <string-array name="credits">
        <item>Lead Programmer: Jerome Leow</item>
        <item>Programmer: Li Zhao Qi</item>
        <item>Images: Chan Si Hon</item>
        <item>Hokkien Audio: Leow Yee Zhi</item>
        <item>Cantonese Audio: Calvin Wen</item>
        <item>Chinese Audio: Li Zhao Qi</item>
        <item>English Audio: Chan Si Hon</item>
    </string-array>

    <string name="title_activity_credits">Credits</string>
    <string name="title_activity_help_page">HelpPage</string>

</resources>
